<resources>
    <string name="app_name">Chat for two</string>
    <string name="app_name_">\"Chat for two\"</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="create_contact">Create contact</string>
    <string name="my_ip">My IP</string>
    <string name="to_whom">"Whom: "</string>
    <!--    <string name="connections">Connections(%d)</string>-->
    <!--    <string name="connections_default">Connections(0)</string>-->
    <string name="ok">OK</string>
    <string name="ip">IP</string>
    <string name="name">name</string>
    <string name="time">Time</string>

    <string name="state">state</string>
    <string name="connect">connection</string>
    <string name="empty_list">List is empty</string>
    <string name="ip_">IP:</string>
    <string name="name_">Name:</string>
    <string name="send_message">Message sent.</string>
    <string name="not_selected_connection">Connection not selected!</string>
    <string name="add_contact">Add contact</string>
    <string name="block_connections">Blocked connections:</string>
    <string name="close">close</string>
    <string name="ask_unconnect">Disable the selected connection?</string>
    <string name="unconnect">Disconnect</string>
    <string name="ask_block_contact">Block connection?</string>
    <string name="block">Block</string>
    <string name="close_connection">Connection is closed!</string>
    <string name="contacts">Contacts:</string>
    <string name="notifycation_on">Connection notification enabled.</string>
    <string name="notifycation_off">Connection notification disabled.</string>
    <string name="edition">Edit</string>
    <string name="perform">Perform</string>
    <string name="select_dot">Selected point</string>
    <string name="I">I</string>
    <string name="km">km.</string>
    <string name="m">m.</string>
    <string name="no_connected">not connected</string>
    <string name="connected">connected</string>
    <string name="connection">connection…</string>
    <string name="debug_change_setting_to_device">Change the location settings on your device</string>
    <string name="not_found">Nothing found.</string>
    <string name="account">Account</string>
    <string name="unknown">without name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_found_activity">"No application found to open this file - "</string>
    <string name="file">File</string>
    <string name="check_permission">You must grant permission to read the repository.</string>
    <string name="canceled">Refuse</string>
    <string name="block_connect">Blocked attempts to connect to the device</string>
    <string name="select_contact">Select a contact to connect to</string>
    <string name="orientation">Screen orientation</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="load_file">File Upload…</string>
    <string name="voice_communication">Voice communication</string>
    <string name="no_read_message">Unread messages</string>
    <string name="missed_call">Missed call</string>
    <string name="chat">Chat</string>
    <string name="connections2">Connections</string>

    <string name="preferences">Settings</string>
    <string name="about">About</string>
    <string name="curr_ver">Current version:</string>
    <string name="available_ver">Available version…</string>
    <string name="support">Support…</string>
    <string name="copyright">Copyright © \"Chat for two\" 2023</string>
    <string name="break_sent_message">Message not sent.</string>
    <string name="debug_support">The message will be sent to the support service.</string>
    <string name="send_msg">Отправить сообщение</string>
    <string name="msg_to_support">Обращение в поддержку \"Чат для Двоих\"</string>
    <string name="message">\"Сообщение \n \"</string>
    <string name="finish_play">Playback Finished!</string>
    <string name="replay">Replay</string>
    <string name="user">User</string>
    <string name="block_ip">You are blocked!</string>
    <string name="completed">Completed!</string>
    <string name="ask_delete_msg">Delete a message from history?</string>
    <string name="delete">Delete</string>
    <string name="size_files_chat">Chat files: %s MB.</string>
    <string name="debug_from_ip">Attention! When the device is rebooted, its LAN IP can be changed!</string>
    <string name="history_chat">Chat</string>
    <string name="not_message">No saved chat history</string>
    <string name="file_no_accept">The file was not received!</string>
    <string name="send_file">Send file</string>
    <string name="message_no_accept">The message is not accepted!\n</string>
    <string name="out_of_memory">\nNot enough RAM! The message is not accepted!</string>
    <string name="out_memory_snaсk_bar">Not enough memory! Available - %s MB</string>
    <string name="outgoing_connection">Establish an outgoing connection</string>
    <string name="notify_connected">Notify when connecting</string>
    <string name="show">Show</string>
    <string name="sel_del_chat">Select chat to delete from history</string>
    <string name="sel_show_chat">Select chat to view</string>
    <string name="chat_deleted">Chat deleted</string>
    <string name="set_gps">Get GPS coordinates</string>
    <string name="send_photo_video">Send photo/video</string>
    <string name="default_orientation">Default</string>
    <string name="successfully">Successfully</string>
    <string name="failed">Failed to execute</string>
    <string name="deleted">Contact deleted</string>
    <string name="for_delete">Delete chat</string>
    <string name="view_history">(view history)</string>
    <string name="debug_def_contact">Create a Contact for the current connection!</string>
    <string name="del_chat">Delete the selected correspondence?</string>
    <string name="sel_sender">Select the sender of the message</string>
    <string name="incoming">Incoming…</string>
    <string name="notification">Notification</string>
    <string name="edit_contact">Editing a contact</string>
    <string name="recipient">Addressee</string>
    <string name="drop_connection">Subscriber broke the connection</string>
    <string name="not_connect">" - no connection!"</string>
    <string name="recovery_connection">Restoring communication…</string>
    <string name="sel_for_view">Select to view</string>
    <string name="sel_for_del">Select to delete</string>
    <string name="close_cur_chat">Close current chat</string>
    <string name="del_cur_chat">Delete current chat</string>

    <string name="get_all_chat">Get all…</string>
    <string name="exit">Exit</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="call_phone">Make call</string>

    <!-- Strings used for fragments for navigation -->

</resources>