<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"

    tools:context=".activity.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivIconAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/chat64" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/curr_ver"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvCheckNewVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_image_button"
                android:onClick="getAvailableVersion"
                android:text="@string/available_ver"
                android:textColor="@color/blue_light"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTitleSizeChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_files_chat" />

                <TextView
                    android:id="@+id/tvClear"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/custom_image_button"
                    android:gravity="center"
                    android:onClick="clearFileChat"
                    android:padding="2dp"
                    android:textAllCaps="false"
                    android:textColor="@color/blue_light"
                    android:textSize="14sp"
                    app:drawableStartCompat="@android:drawable/ic_menu_close_clear_cancel"
                    app:drawableTint="@android:color/holo_red_dark" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_image_button"
                android:onClick="displayInputMessage"
                android:text="Все вопросы и пожелания отправлять на gribal3x@yandex.ru"
                android:textColor="@color/blue_light"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/copyright" />
</LinearLayout>