<?xml version="1.0" encoding="UTF-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <LinearLayout
            android:id="@+id/blockViewInfoContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAvatarContact"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:background="@android:color/transparent"
                android:maxWidth="100dp"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:padding="3dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_baseline_account_circle_24" />

            <LinearLayout
                android:id="@+id/blockNameAndIpContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tvContactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ip" />

                <TextView
                    android:id="@+id/tvContactIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/blockNotifyContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/blockViewInfoContact"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/notify_connected"
                android:textSize="12sp"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ibNotifyOfConnection"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@android:color/transparent"
                android:padding="7dp"
                app:srcCompat="@drawable/ic_baseline_notifications_off_24" />

            <Switch
                android:id="@+id/switchRestart"
                android:layout_width="wrap_content"
                android:layout_height="36dp"

                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/outgoing_connection"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>